cmake_minimum_required(VERSION 3.23)
project(second)

set(CMAKE_CXX_STANDARD 14)

add_executable(First main.cpp)
add_executable(Second second.cpp)
add_executable(Third third.cpp)
add_executable(Four four.cpp)
add_executable(Five five.cpp)
add_executable(Six six.cpp)
add_executable(Seven seven.cpp)
add_executable(Eight eight.cpp)

